fixed overlapping

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -10,6 +10,7 @@ body.active-modal {
 }
 
 .modal, .overlay {
+    z-index: 1;
     width: 100vw;
     height: 100vh;
     top: 0;
@@ -24,6 +25,7 @@ body.active-modal {
 }
 
 .modal-content {
+    z-index: 1;
     position: absolute;
     top: 40%;
     left: 50%;
